[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/F1-2016-logo-wt.jpg" class="img-medium"/>
+            <img src="/ui/kit.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am a dragon.
+            Hi! I am a kit.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
