--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/kit.png"/>
+            <img src="/ui/madi.png"/>
         </div>
         <br>
         <div class="center text-big bold">
