--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
 
         <div class="center">
 
-            <img src="/ui/kit.png"/>
+            <img src="/ui/kit.png" width=300/>
         
 	</div>
         
