--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
 
         <div class="center">
 
-            <img src="/ui/kit.png" width="300"/>
+            <img src="/ui/F1-2016-logo-wt.jpg" width="300"/>
         
 	</div>
         
@@ -21,8 +21,8 @@
 
             Hi! I am Piyush.
 
-	<h4> A new heading </h4>
-		new local changes
+	<h4> F1 2017</h4>
+		Starting 26th March
         </div>
 
         <script type="text/javascript" src="/ui/main.js">
