--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
 
         <div class="center">
 
-            <img src="/ui/F1-2016-logo-wt.jpg" width="300"/>
+            <img src="/ui/kit.png" width="300"/>
         
 	</div>
         
