[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
 
         <div class="center">
 
-            <img src="/ui/logo.png" width="300"/>
+            <img src="/ui/kit.png" width="300"/>
         
 	</div>
         
