[imad-console] Updates ui/a1.html

--- a/ui/a1.html
+++ b/ui/a1.html
@@ -1,1 +1,13 @@
-
+<html>
+    <head>
+        <title>A1 | IMAD</title>
+    </head>
+    <body>
+        <h1>ARTICLE ONE</h1>
+        <br>
+        <div>
+            <a href="/">HomePage</a>
+        </div>
+        <hr/>
+    </body>
+</html>
