[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,9 +11,9 @@
 
         <div class="center">
 
-            <img src="/ui/kit.png" width="300"/>
+            <img src="/ui/logo.png"/>
         
-	</div>
+	    </div>
         
 	<br>
 
