--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
 
         <div class="center">
 
-            <img src="/ui/logo.png"/>
+            <img src="/ui/logo.png" width="300"/>
         
 	    </div>
         
