--- a/ui/a2.html
+++ b/ui/a2.html
@@ -1,1 +1,14 @@
-
+<html>
+    <head>
+        <title>Article 2 | IMAD</title>
+    </head>
+    <body>
+        <h1>ARTICLE TWO</h1>
+        <br>
+        <div>
+            <a href="/article-one">go to Article 1</a>
+        </div>
+        <hr/>
+        <p>Content for second Article</p>
+    </body>
+</html>
