--- a/ui/a3.html
+++ b/ui/a3.html
@@ -1,1 +1,14 @@
-
+<html>
+    <head>
+        <title>Article 3| IMAD</title>
+    </head>
+    <body>
+        <h1>ARTICLE THREE</h1>
+        <br>
+        <div>
+            <a href="/article-two">Article 2</a>
+        </div>
+        <hr/>
+        <p>Content for third Article</p>
+    </body>
+</html>
