[imad-console] Updates ui/a3.html

--- a/ui/a3.html
+++ b/ui/a3.html
@@ -6,7 +6,8 @@
         <h1>ARTICLE THREE</h1>
         <br>
         <div>
-            <a href="/article-two">Article 2</a>
+            <a href="/article-two">go to Article 2</a>
+            <a href="/">HomePage</a>
         </div>
         <hr/>
         <p>Content for third Article</p>
