[imad-console] Updates ui/a1.html

--- a/ui/a1.html
+++ b/ui/a1.html
@@ -7,8 +7,12 @@
         <br>
         <div>
             <a href="/">HomePage</a>
+            <a href="/article-two">Article 2</a>
         </div>
         <hr/>
-        <p>Content for first Article</p>
+        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
     </body>
 </html>
