--- a/ui/a2.html
+++ b/ui/a2.html
@@ -7,6 +7,7 @@
         <br>
         <div>
             <a href="/article-one">go to Article 1</a>
+            <a href="/article-three">go to Article 3</a>
         </div>
         <hr/>
         <p>Content for second Article</p>
