[imad-console] Updates ui/a1.html

--- a/ui/a1.html
+++ b/ui/a1.html
@@ -1,7 +1,16 @@
 <html>
     <head>
         <title>A1 | IMAD</title>
+        <Style>
+            .para{
+                max-width: 1000px;
+                margin: 0 auto;
+                font-family: sans-serif;
+                color: grey;
+            }
+        </Style>
     </head>
+    
     <body>
         <h1>ARTICLE ONE</h1>
         <br>
@@ -10,9 +19,11 @@
             <a href="/article-two">Article 2</a>
         </div>
         <hr/>
-        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
-        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
-        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
-        <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+        <div class="para">
+            <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+            <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+            <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+            <p>Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article. Content for first Article.</p>
+        </div>    
     </body>
 </html>
