[imad-console] Updates ui/a1.html

--- a/ui/a1.html
+++ b/ui/a1.html
@@ -8,13 +8,17 @@
                 font-family: sans-serif;
                 color: grey;
             }
+            .link{
+                margin: 0 auto;
+                color: blue;
+            }
         </Style>
     </head>
     
     <body>
-        <h1>ARTICLE ONE</h1>
+        <h1 align="center">ARTICLE ONE</h1>
         <br>
-        <div>
+        <div class="link">
             <a href="/">HomePage</a>
             <a href="/article-two">Article 2</a>
         </div>
