--- a/ui/a1.html
+++ b/ui/a1.html
@@ -6,11 +6,15 @@
                 max-width: 1000px;
                 margin: 0 auto;
                 font-family: sans-serif;
-                color: grey;
+                color: rgba(228, 228, 227, 0.77);
+                background: black;
+                padding-top: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
             }
             .link{
                 margin: 0 auto;
-                color: blue;
+                color: #25ff00;
             }
         </Style>
     </head>
