--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,13 @@
 <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width , initial-scale=1">
+    <Style>
+        .link{
+            max-width: 50px;
+            margin: 10 auto;
+            font-family: arial;
+        }
+    </Style>
 </head>
     
 <body>
@@ -23,6 +30,12 @@
 
 	<h4> F1 2017</h4>
 		Starting 26th March
+        </div>
+        
+        <div class="link">
+            <a href="/article-one">Article One</a>&nbsp;
+            <a href="/article-two">Article Two</a>&nbsp;
+            <a href="/article-three">Article Three</a>&nbsp;
         </div>
 
         <script type="text/javascript" src="/ui/main.js">
