--- a/ui/index.html
+++ b/ui/index.html
@@ -33,9 +33,9 @@
         </div>
         
         <div class="link">
-            <a href="/article-one">Article One</a>&nbsp;
-            <a href="/article-two">Article Two</a>&nbsp;
-            <a href="/article-three">Article Three</a>&nbsp;
+            <a href="/article-one">Article One</a>
+            <a href="/article-two">Article Two</a>
+            <a href="/article-three">Article Three</a>
         </div>
 
         <script type="text/javascript" src="/ui/main.js">
