[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,8 +7,11 @@
         <meta name="viewport" content="width=device-width , initial-scale=1">
     <Style>
         .link{
-            max-width: 50px;
-            margin: 10 auto;
+            align-content: center;
+            font-family: cursive;
+            margin-left: 50px;
+            margin-right: 50px;
+            margin: 0 auto;
         }
     </Style>
 </head>
@@ -31,7 +34,7 @@
 		Starting 26th March
         </div>
         
-        <div class="link">
+        <div class="link" align="center">
             <a href="/article-one">Article One</a>
             <a href="/article-two">Article Two</a>
             <a href="/article-three">Article Three</a>
