[imad-console] Updates ui/a2.html

--- a/ui/a2.html
+++ b/ui/a2.html
@@ -1,15 +1,33 @@
 <html>
     <head>
         <title>Article 2 | IMAD</title>
+        <Style>
+            .para{
+                max-width: 1000px;
+                margin: 0 auto;
+                font-family: sans-serif;
+                color: rgba(228, 228, 227, 0.77);
+                background: black;
+                padding-top: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            .link{
+                margin: 0 auto;
+                color: #25ff00;
+            }
+        </Style>
     </head>
     <body>
-        <h1>ARTICLE TWO</h1>
+        <h1 align="center">ARTICLE TWO</h1>
         <br>
-        <div>
+        <div class="link">
             <a href="/article-one">go to Article 1</a>
             <a href="/article-three">go to Article 3</a>
         </div>
         <hr/>
-        <p>Content for second Article</p>
+        <div class="para">
+            <p>Content for second Article</p>
+        </div>    
     </body>
 </html>
