--- a/ui/a3.html
+++ b/ui/a3.html
@@ -1,15 +1,33 @@
 <html>
     <head>
         <title>Article 3| IMAD</title>
+        <Style>
+            .para{
+                max-width: 1000px;
+                margin: 0 auto;
+                font-family: sans-serif;
+                color: rgba(228, 228, 227, 0.77);
+                background: black;
+                padding-top: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            .link{
+                margin: 0 auto;
+                color: #25ff00;
+            }
+        </Style>
     </head>
     <body>
-        <h1>ARTICLE THREE</h1>
+        <h1 align="center">ARTICLE THREE</h1>
         <br>
-        <div>
+        <div class="link">
             <a href="/article-two">go to Article 2</a>
             <a href="/">HomePage</a>
         </div>
         <hr/>
-        <p>Content for third Article</p>
+        <div class="para">
+            <p>Content for third Article</p>
+        </div>
     </body>
 </html>
