[imad-console] Updates ui/a3.html

--- a/ui/a3.html
+++ b/ui/a3.html
@@ -1,22 +1,7 @@
 <html>
     <head>
         <title>Article 3| IMAD</title>
-        <Style>
-            .para{
-                max-width: 1000px;
-                margin: 0 auto;
-                font-family: sans-serif;
-                color: rgba(228, 228, 227, 0.77);
-                background: black;
-                padding-top: 10px;
-                padding-left: 10px;
-                padding-right: 10px;
-            }
-            .link{
-                margin: 0 auto;
-                color: #25ff00;
-            }
-        </Style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <h1 align="center">ARTICLE THREE</h1>
