[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,15 +5,6 @@
 <head>
         <link href="/ui/style.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width , initial-scale=1">
-    <Style>
-        .link{
-            align-content: center;
-            font-family: cursive;
-            margin-left: 50px;
-            margin-right: 50px;
-            margin: 0 auto;
-        }
-    </Style>
 </head>
     
 <body>
@@ -34,7 +25,7 @@
 		Starting 26th March
         </div>
         
-        <div class="link" align="center">
+        <div class="linkhome" align="center">
             <p>
                 <a href="/article-one">Article One</a>
                 <a href="/article-two">Article Two</a>
