--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
 
         <div class="center">
 
-            <img src="/ui/logo.png" width="300"/>
+            <img src="/ui/logo.png" width="300" id="logo"/>
         
 	    </div>
         
