[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,9 +11,9 @@
 <body>
 
         <div class="center">
-
-            <img src="/ui/logo.png" width="300" id="logo"/>
-        
+            <div class="img">
+                <img src="https://instagram.fccu2-1.fna.fbcdn.net/t51.2885-19/s150x150/15803359_1793647750851979_6181634094263173120_n.jpg" width="300" id="logo"/>
+            </div>
 	    </div>
         
 	<br>
@@ -33,7 +33,10 @@
                 <a href="/article-three">Article Three</a>
             </p>
         </div>
-
+        <hr/>
+        <div class="footer">
+            This Button <button id="counter">Click Me!</button>has been clicked <span id="count">0</span>times.
+        </div>
         <script type="text/javascript" src="/ui/main.js">
 
         </script>
