[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
     
 <body>
 
-        <div class="center">
+        <div class="img-medium">
             <div class="img">
                 <img src="https://instagram.fccu2-1.fna.fbcdn.net/t51.2885-19/s150x150/15803359_1793647750851979_6181634094263173120_n.jpg" height="300" width="300" id="logo"/>
             </div>
