[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,13 +17,22 @@
 	    </div>
         
 	<br>
-
+    <hr/>
         <div class="center text-big bold">
 
             Hi! I am Piyush.
 
         </div>
-        
+        <div class="text">
+            <h1><u>Professional</u></h1>
+            <p>B.Tech Student at NIST</p><br>
+            <p>Stream : Computer Science</p>
+            <hr/>
+            <h1><u>Personal</u></h1>
+            <p>From Sambalpur,Odisha</p><br>
+            <p>Football Fan , Coder , Reader</p>
+        </div>
+        <hr/>
         <div class="linkhome" align="center">
             <p>
                 <a href="/article-one">Article One</a>
