[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,13 +23,14 @@
             Hi! I am Piyush.
 
         </div>
+        <hr/>
         <div class="text">
             <h1><u>Professional</u></h1>
-            <p>B.Tech Student at NIST</p><br>
+            <p>B.Tech Student at NIST</p>
             <p>Stream : Computer Science</p>
             <hr/>
             <h1><u>Personal</u></h1>
-            <p>From Sambalpur,Odisha</p><br>
+            <p>From Sambalpur,Odisha</p>
             <p>Football Fan , Coder , Reader</p>
         </div>
         <hr/>
