[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -44,6 +44,10 @@
         <hr/>
         <div class="footer">
             This Button <button id="counter">Click Me!</button>has been clicked <span id="count">0</span> times.
+            <hr/>
+            <input type="text" id="name" placeholder="name">
+            <input type="submit" id="btn" value="Submit">
+            <ul id="list"></ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
 
