--- a/ui/index.html
+++ b/ui/index.html
@@ -47,7 +47,9 @@
             <hr/>
             <input type="text" id="name" placeholder="name">
             <input type="submit" id="btn" value="Submit">
-            <ul id="list"></ul>
+            <ul id="list">
+                
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
 
